# devflowfix-dashboard

./: .dockerignore  .gitignore  APIS.md  CLAUDE.md  CLI.md  Dockerfile  INCIDENTS_IMPLEMENTATION.md  PR_MANAGEMENT_API.md  SEO-IMPLEMENTATION.md  V2_API_GUIDE.md  ZITADEL_FRONTEND_INTEGRATION.md  amplify.yml  angular.json  customHttp.yml  nginx.conf  package-lock.json  package.json  prerender-routes.txt  tsconfig.app.json  tsconfig.spec.json  vercel.json  vitest.config.ts  webhook.md
.github/workflows/: codeql.yml
devflowfix-chart/: Chart.yaml  values.yaml
devflowfix-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  gateway.yaml  hpa.yaml  httproute.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
k8s/: deployment.yaml  gateway.yaml  hpa.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
k8s/infra/: README.md  cert-manager-issuer.yaml  kgateway-policies.yaml  kgateway-values.yaml  setup.sh  traefik-dashboard-auth.yaml  traefik-ingressroute.yaml  traefik-middleware.yaml  traefik-values.yaml
public/lotties/: process.json
src/: index.html  manifest.json  robots.txt  silent-refresh.html  sitemap.xml  styles.css  test-setup.ts
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/auth/: auth.config.ts  (+4 more)
wasm/: Cargo.toml
wasm/pkg/: devflowfix_wasm.d.ts  devflowfix_wasm.js  devflowfix_wasm_bg.wasm  devflowfix_wasm_bg.wasm.d.ts  package.json
wasm/src/: analytics.rs  csv_export.rs  lib.rs  sanitization.rs  tour_math.rs
(+150 files in other folders)
